@@ -1,23 +1,20 @@
 Package: strain
 Type: Package
-Title: Tools for working with strainmeter and PBO borehole data
-Version: 0.2.9
-Date: 2019-10-07
+Title: Tools for working with strainmeter and NOTA borehole data
+Version: 0.2.10
+Date: 2021-10-05
 Author: Andrew J. Barbour
 Maintainer: Andrew J. Barbour <andy.barbour@gmail.com>
 License: GPL (>= 2)
 SystemRequirements: awk, csh, python (>= 2.3)
 URL: https://github.com/abarbour/strain (dev) and
-    https://abarbour.github.io/pborepo for metadata.
+    https://github.com/abarbour/pborepo for metadata.
 Description: Methods and classes for strainmeter data.
     Currently, supported instruments include UCSD-style longbase
-    laser strainmeters, and PBO-style borehole strainmeters. Support for
-    PBO-style pore pressure data is
+    laser strainmeters, and Network of the Americas (NOTA)-style 
+    borehole strainmeters. Some support for NOTA pore pressure data is
     included. Some functions  providing metadata support
     attempt to make a connection with the 'pborepo'.
-    For processing of raw data, the user is directed to
-    Duncan Agnew's 'PIASD'
-    and John Langbein's 'cleanstrain+' (see 'URL' section).
 Depends:
     R (>= 2.14.1)
 Imports:
@@ -32,5 +29,7 @@ Imports:
     crayon
 Encoding: UTF-8
 RoxygenNote: 7.1.0
-Suggests: testthat,
+Suggests: dplyr,
+    readr,
+    testthat,
     covr
