@@ -3,16 +3,16 @@ HFB=${LOC}/hfbsm
 BOT=${LOC}/bottlefile.py
 BOTMRG=${LOC}/bottlefile_merge.py
 
-all: hfbsm bottlefile.py bottlefile_merge.py
-
-hfbsm: $(HFB)
-	cp $(HFB) .
-
-bottlefile.py: $(BOT)
-	cp $(BOT) .
-
-bottlefile_merge.py: $(BOTMRG)
-	cp $(BOTMRG) .
+#all: hfbsm bottlefile.py bottlefile_merge.py
+#
+#hfbsm: $(HFB)
+#	cp $(HFB) .
+#
+#bottlefile.py: $(BOT)
+#	cp $(BOT) .
+#
+#bottlefile_merge.py: $(BOTMRG)
+#	cp $(BOTMRG) .
 
 TEST:
 	01.test
